--- a/src/capitoli/capitolo-1.tex
+++ b/src/capitoli/capitolo-1.tex
@@ -9,22 +9,83 @@
 
 %**************************************************************
 \section{Profilo aziendale}
-Storia e descrizione dell'azienda.
+    \textbf{Zextras s.r.l.} nasce a Torri di Quartesolo(VI) nel 2011 come estensione di \textbf{Studio Storti s.r.l.} che opera, dal 1997, nel campo delle soluzioni \gls{opensg}. Sin dall'inizio, l'obiettivo principale di questa società era quello di estendere \gls{zcsg} \textit{Open Source Edition}, uno dei più diffusi strumenti collaborativi per aziende e pubbliche amministrazioni, aggiungendo nuove funzionalità. \\
+    Nel corso degli anni è nata e cresciuta \textbf{Zextras Suite}, una raccolta di estensioni che permettono di arricchire \gls{zcsg} con nuove funzionalità utili nel suo utilizzo in ambito professionale.
+    Le soluzioni proposte da \textbf{Zextras} con i sui prodotti vengono da subito apprezzate da \textbf{Synacor}, l'azienda che sviluppa e mantiene \gls{zcsg}, la quale decide di includere parte del codice sviluppato dall'azienda nella sua versione \gls{opensg}. Attualmente i prodotti sviluppati dall'azienda vengono utilizzati da più di 100 milioni di utenti in tutto il mondo.
 
-%**************************************************************
+    \begin{figure}[h]
+        \centering
+        \includegraphics[width=0.55\textwidth]{immagini/zextras_logo.png}
+        \caption{Logo Zextras}
+        \label{fig: Logo Zextras}
+    \end{figure}
+
 \section{Dominio applicativo}
-Descrizione del core business dell'azienda, ovvero il software Zimbra e il pacchetto Zextras.
-
+    \subsection{Zimbra Open Source Edition}
+        \textbf{Zextras}, come già accennato, è nata con l'obiettivo di creare nuovi contenuti per \gls{zcsg} facendone quindi il suo \textit{core business}.
+        \textbf{Zimbra} è un software collaborativo di gruppo adatto a coordinare e supportare l'attività lavorativa sia di aziende sia di pubbliche amministrazioni. I principali servizi offerti da questo software sono i seguenti:
+        \begin{itemize}
+            \item posta elettronica;
+            \item gestione calendari condivisi e organizzazione eventi;
+            \item interfaccia amministratore;
+            \item supporto dei servizi su dispositivi mobili.
+        \end{itemize}
+        Per estendere l'applicativo con ulteriori funzionalità sviluppate anche da terze parti, è possibile installare un \gls{pluging} che in ambiente \gls{zcsg} viene chiamato \textbf{Zimlet}. \\
+        Esistono due versioni di \gls{zcsg}:
+        \begin{itemize}
+            \setlength\itemsep{0em}
+            \item \textbf{Zimbra Open Source Edition}: è la versione su cui lavora \textbf{Zextras} e offre i servizi elecanti in precedenza;
+            \item \textbf{Zimbra Network Edition}: è una versione a pagamento che offre alcune funzionalità \gls{closedg} tra cui un protocollo per la sincronizzazione di calendario e contatti e maggiori funzionalità per gli amministratori.
+        \end{itemize}
+    \subsection{Zextras Suite}
+        \textbf{Zextras Suite} è un'insieme di funzionalità che permettono di aggiungere delle funzionalità a \gls{zcsg} \textit{Open Source Edition} in modo indipendente da quest'ultimo. Ciò permette una configurazione altamente modulare e personalizzabile in base alle necessità dell'utilizzatore. \\
+        Questa suite offre i seguenti prodotti:
+        \begin{itemize}
+            \setlength\itemsep{0em}
+            \item \textbf{Powerstore}: sistema di ottimizzazione dei dati che permette il risparmio di memoria sui server \textbf{Zimbra};
+            \item \textbf{Backup}: motore di \gls{backupg} in \gls{realtimeg};
+            \item \textbf{Admin}: strumenti dedicati agli amministratori per la gestione e il monitoraggio dei servizi attivi sull'istanza di \gls{zcsg};
+            \item \textbf{Mobile}: gestione e sincronizzazione di posta elettronica, contatti, eventi e calendario su dispositivi mobili tramite protocolli \textit{Exchange} e \textit{EAS 16.0 (ActiveSync)};
+            \item \textbf{Chat}: piattaforma di messaggistica istantanea nativamente integrata in \gls{zcsg}, che permette lo scambio di messaggi e di effettuare videochiamate;
+            \item \textbf{Drive}: piattaforma per la condivisione di file e l'utilizzo di fogli di lavoro in modo condiviso.
+        \end{itemize}
 \section{Struttura interna}
-Descrizione della struttura interna dell'azienda
+L'azienda è suddivisa in diversi settori specializzati, ciò permette di avere un organico fornito di tutte le competenze necessarie per raggiungere gli obiettivi aziendali. Di seguito un elenco che illustra i diversi settori:
+\begin{itemize}
+    \item \textbf{Commercio}: ...;
+    \item \textbf{Amministrazione di sistema}: ...
+    \item \textbf{Team di sviluppo}:
+        \begin{itemize}
+            \item \textbf{Front-end}: ...;
+            \item \textbf{Back-end}: ...;
+            \item \textbf{UI/UX Design}: ...;
+            \item \textbf{Mobile}: ....
+        \end{itemize}
+\end{itemize}
 
 \section{Processi aziendali}
-Descrizione del modo di lavorare dell'azienda.
+\subsection{Fornitura}
+\subsection{Comunicazione}
+\subsubsection{Strumenti utilizzati}
 
 \subsection{Metodologia di sviluppo}
-Descrizione della metodologia adottata in particolare nel contesto aziendale
 
-\subsection{Strumenti a supporto dei processi}
-Strumenti utilizzati 
+\subsection{Gestione di progetto}
+\subsubsection{Strumenti utilizzati}
+
+\subsection{Configurazione}
+Controllo di versione
+\subsubsection{Strumenti utilizzati}
+Bitbucket e Git
+
+\subsection{Documentazione}
+\paragraph{Strumenti utilizzati}
+
+\subsection{Verifica}
+\subsubsection{Strumenti utilizzati}
+Jenkins, ecc...
+
+
+Descrizione della metodologia adottata in particolare nel contesto aziendale
 
 %**************************************************************
