--- a/src/glossario.tex
+++ b/src/glossario.tex
@@ -8,7 +8,7 @@
     name=\glslink{zcs}{ZCS},
     text=Zimbra,
     sort=zimbra,
-    description={Zimbra Collaboration Suite}
+    description={Zimbra Collaboration}
 }
 
 \newglossaryentry{spg}
@@ -89,6 +89,45 @@
     description={Con il termine \textbf{provisioning} si intende, generalmente, la gestione degli utenti. Questo termine include un insieme di funzionalità riassunte dall'acronimo \gls{crudg}}
 }
 
+\newglossaryentry{opensg}
+{
+    name=\glslink{opensg}{Open Source},
+    text=open source,
+    sort=open source,
+    description={Con il termine \textbf{open source} si fa riferimento ad un software la cui lincenza permette di utilizzarlo, modificarlo e redistribuirlo}
+}
+
+\newglossaryentry{closedg}
+{
+    name=\glslink{closedg}{Closed Source},
+    text=closed source,
+    sort=closed source,
+    description={Con il termine \textbf{closed source} si fa riferimento ad un software proprietario, quindi non disponibile pubblicamente}
+}
+
+\newglossaryentry{pluging}
+{
+    name=\glslink{pluging}{Plug-in},
+    text=plug-in,
+    sort=plugin,
+    description={Componente software che aggiunge funzionalità all'applicazione su cui viene installato}
+}
+
+\newglossaryentry{backupg}
+{
+    name=\glslink{backupg}{Backup},
+    text=backup,
+    sort=backup,
+    description={Quando si parla di backup, si fa riferimento al processo di duplicazione di dati su più supporti (fisici o cloud) al fine di poterli recuperare in caso di perdita inattesa}
+}
+
+\newglossaryentry{realtimeg}
+{
+    name=\glslink{realtimeg}{Real-time},
+    text=real-time,
+    sort=realtime,
+    description={Software che opera sotto condizioni temporali ben definite}
+}
 
 %**************************************************************
 % Acronimi
