--- a/src/main.tex
+++ b/src/main.tex
@@ -101,7 +101,11 @@
                                         % 2. eseguire: biber tesi
                                         % 3. compilare ancora tesi.tex.
 
+\usepackage{titlesec}
+\titlespacing*{\section}{0pt}{1.1\baselineskip}{\baselineskip}
+
 \input{tesi-config}                     % file con le impostazioni personali
+
 %\usepackage[hidelinks]{hyperref}    %clickable ToC
 %\hypersetup{allcolors=black,linktocpage,linktoc=all}
 
@@ -122,7 +126,7 @@
 %**************************************************************
 \mainmatter
 \input{capitoli/capitolo-1}             % Introduzione
-\input{capitoli/capitolo-2}             % Processi
+\input{capitoli/capitolo-2}             % Stage
 \input{capitoli/capitolo-3}             % Kick-Off
 \input{capitoli/capitolo-4}             % Conclusioni
 %\appendix                               
