--- a/src/capitoli/capitolo-3.tex
+++ b/src/capitoli/capitolo-3.tex
@@ -36,6 +36,11 @@ Alcuni dettagli di rilievo per quanto riguarda la parte implementativa. In parti
 \subsection{Parsing SAML assertion}
 \subsection{Adattamento libreria HTTP}
 
+\section{Documentazione}
+Documentazione del codice e del funzionamento del prodotto sviluppato
+\subsection{Codice}
+\subsection{Manutenzione}
+
 \section{Verifica e Validazione}
 Descrizione dell'attività di verifica svolta e della validazione
 \subsection{Verifica}
