--- a/src/capitoli/capitolo-4.tex
+++ b/src/capitoli/capitolo-4.tex
@@ -9,7 +9,7 @@
 
 %**************************************************************
 \section{Soddisfacimento degli obiettivi}
-Illustrazione degli obiettivi raggiunti rispetto a quelli attesi
+Illustrazione degli obiettivi raggiunti rispetto a quelli attesi da me e dall'azienda
 %**************************************************************
 \section{Conoscenze e abilità acquisite}
 Descrizione di tutte le conoscenze e competenze acquisite sul piano tecnico e sul mondo del lavoro
