--- a/src/tesi-config.tex
+++ b/src/tesi-config.tex
@@ -260,3 +260,12 @@
 }
 
 \newcommand{\classdesc}[2]{\item[\textbf{#1:}] #2}
+
+%Fonte immagini
+\newcommand*{\captionsource}[2]{%
+  \caption[{#1}]{%
+    #1%
+    \\\hspace{\linewidth}%
+    \textbf{Fonte:} #2%
+  }%
+}
