--- a/src/glossario.tex
+++ b/src/glossario.tex
@@ -8,7 +8,7 @@
     name=\glslink{zcs}{ZCS},
     text=Zimbra,
     sort=zimbra,
-    description={Zimbra Collaboration}
+    description={Zimbra \textit{Collaboration}}
 }
 
 \newglossaryentry{spg}
@@ -16,7 +16,7 @@
     name=\glslink{sp}{SP},
     text=SP,
     sort=service provider,
-    description={Un service provider è un sistema che fornisce un servizio a degli utenti. Lo si può identificare come un sito web che eroga un certo servizio}
+    description={Un \textit{service provider} è un sistema che fornisce un servizio a degli utenti. Lo si può identificare come un sito web che eroga un certo servizio}
 }
 
 \newglossaryentry{idpg}
@@ -24,7 +24,7 @@
     name=\glslink{idp}{IdP},
     text=IdP,
     sort=identity provider,
-    description={Un identity provider è un sistema che crea, mantiene e gestisce le informazioni sull'identità di un utente. Si occupa di fornire il servizio di autenticazione ai \gls{spg}}
+    description={Un \textit{identity provider} è un sistema che crea, mantiene e gestisce le informazioni sull'identità di un utente. Si occupa di fornire il servizio di autenticazione ai \gls{spg}}
 }
 
 \newglossaryentry{okta}
@@ -40,7 +40,7 @@
     name=\glslink{xml}{XML},
     text=XML,
     sort=xml,
-    description={Linguaggio di \textbf{Markup} che consente la definizione di \textbf{metadati}}
+    description={Linguaggio di \textit{\textbf{Markup}} che consente la definizione di \textbf{metadati}}
 }
 
 \newglossaryentry{samlg}
@@ -77,7 +77,7 @@
         \item \textbf{Create}: creazione di un utente;
         \item \textbf{Read}: richiesta attributi di un utente;
         \item \textbf{Update}: aggiornamento attributi di un utente;
-        \item \textbf{Delete}: non si parla di una cancellazione vera e propria di un utente ma di \textbf{deprovisioning}, ovvero una disabilitazione dell'account di quest'ultimo o di un cambio di permessi
+        \item \textbf{Delete}: non si parla di una cancellazione vera e propria di un utente ma di \textbf{deprovisioning}, ovvero una disabilitazione dell'\textit{account} di quest'ultimo o di un cambio di permessi
     \end{itemize}}
 }
 
@@ -86,7 +86,7 @@
     name=\glslink{prov}{Provisioning},
     text=Provisioning,
     sort=provisioning,
-    description={Con il termine \textbf{provisioning} si intende, generalmente, la gestione degli utenti. Questo termine include un insieme di funzionalità riassunte dall'acronimo \gls{crudg}}
+    description={Con il termine \textit{\textbf{provisioning}} si intende, generalmente, la gestione degli utenti. Questo termine include un insieme di funzionalità riassunte dall'acronimo \gls{crudg}}
 }
 
 \newglossaryentry{opensg}
@@ -94,7 +94,7 @@
     name=\glslink{opensg}{Open Source},
     text=open source,
     sort=open source,
-    description={Con il termine \textbf{open source} si fa riferimento ad un software la cui lincenza permette di utilizzarlo, modificarlo e redistribuirlo}
+    description={Con il termine \textit{\textbf{open source}} si fa riferimento ad un \textit{software} la cui lincenza permette di utilizzarlo, modificarlo e redistribuirlo}
 }
 
 \newglossaryentry{closedg}
@@ -102,7 +102,7 @@
     name=\glslink{closedg}{Closed Source},
     text=closed source,
     sort=closed source,
-    description={Con il termine \textbf{closed source} si fa riferimento ad un software proprietario, quindi non disponibile pubblicamente}
+    description={Con il termine \textit{\textbf{closed source}} si fa riferimento ad un software proprietario, quindi non disponibile pubblicamente}
 }
 
 \newglossaryentry{pluging}
@@ -110,7 +110,7 @@
     name=\glslink{pluging}{Plug-in},
     text=plug-in,
     sort=plugin,
-    description={Componente software che aggiunge funzionalità all'applicazione su cui viene installato}
+    description={Componente \textit{software} che aggiunge funzionalità all'applicazione su cui viene installato}
 }
 
 \newglossaryentry{backupg}
@@ -118,7 +118,7 @@
     name=\glslink{backupg}{Backup},
     text=backup,
     sort=backup,
-    description={Quando si parla di backup, si fa riferimento al processo di duplicazione di dati su più supporti (fisici o cloud) al fine di poterli recuperare in caso di perdita inattesa}
+    description={Quando si parla di \textit{backup}, si fa riferimento al processo di duplicazione di dati su più supporti (fisici o cloud) al fine di poterli recuperare in caso di perdita inattesa}
 }
 
 \newglossaryentry{realtimeg}
@@ -126,8 +126,113 @@
     name=\glslink{realtimeg}{Real-time},
     text=real-time,
     sort=realtime,
-    description={Software che opera sotto condizioni temporali ben definite}
+    description={\textit{Software} che opera sotto condizioni temporali ben definite}
 }
+
+\newglossaryentry{userexpg}
+{
+    name=\glslink{userexpg}{User experience},
+    text=user experience,
+    sort=user experience,
+    description={L'esperienza che manifesta l'utente, nell'interagire con un certo prodotto, sistema o servizio}
+}
+
+\newglossaryentry{agileg}
+{
+    name=\glslink{agileg}{Agile},
+    text=agile,
+    sort=agile,
+    description={Approccio allo sviluppo software che pone il focus sul consegnare al cliente un \textit{software} completo, funzionante  e di qualità in tempi brevi}
+}
+
+\newglossaryentry{frameworkg}
+{
+    name=\glslink{frameworkg}{Framework},
+    text=framework,
+    sort=framework,
+    description={Insieme di strumenti che definiscono la struttura di un sistema a livello concettuale. Nel caso del software si può intedendere come un'architettura sulla quale basare lo sviluppo di un prodotto. Quando si parla di modello di sviluppo si intende l'insieme di strumenti teorici che permettono di mettere in atto un concetto specifico}
+}
+
+\newglossaryentry{taskg}
+{
+    name=\glslink{taskg}{Task},
+    text=task,
+    sort=task,
+    description={Incarico di piccole dimensione assegnato ad un soggetto che dovrà portarlo a termine}
+}
+
+\newglossaryentry{wysiwygg}
+{
+    name=\glslink{wysiwygg}{WYSIWYG},
+    text=WYSIWYG,
+    sort=wysiwyg,
+    description={Sta per "\textit{What You See Is What You Get}" e si riferisce ad una tipologia di \textit{editor} di testo in grado di mostrare in tempo reale, durante la scrittura, quale sarà l'aspetto finale del documento}
+}
+
+\newglossaryentry{repositoryg}
+{
+    name=\glslink{repositoryg}{Repository},
+    text=repository,
+    sort=repository,
+    description={Nell'ambito dello sviluppo software rappresenta un contenitore di codice sorgente, gestito da un sistema di versionamento}
+}
+
+\newglossaryentry{workflowg}
+{
+    name=\glslink{workflowg}{Workflow},
+    text=workflow,
+    sort=workflowg,
+    description={Flusso di esecuzione di un insieme di attività}
+}
+
+\newglossaryentry{codereviewg}
+{
+    name=\glslink{codereviewg}{Code Review},
+    text=code review,
+    sort=code review,
+    description={Attività di revisione del codice effttuata da persone diverse dagli autori, al fine di correggere errori, migliorarne la qualità ed eventualmente proporre soluzioni alternative}
+}
+
+\newglossaryentry{itsg}
+{
+    name=\glslink{itsg}{Issue Tracing System},
+    text=issue tracking system,
+    sort=issue tracking system,
+    description={Software che permette di gestire in maniera ordinata un insieme di issue, ovvero dei \textit{\gls{taskg}} da svolgere. Tipicamente viene utilizzato in ambito collaborativo in quanto permette di tenere traccia delle \textit{issue} risolte da tutti i membri del \textit{team}}
+}
+
+\newglossaryentry{cig}
+{
+    name=\glslink{cig}{Continuous Integration},
+    text=continuous integration,
+    sort=continuous integration,
+    description={Pratica nell'ambito dell'ingeneria del software che consiste nel effettuare \textit{merge} frequenti nella \textit{codebase}, al fine di aggiungere in modo graduale le nuove modifiche, assicurando l'assenza di conflitti tra le nuove modifiche e quelle precedenti}
+}
+
+\newglossaryentry{cdg}
+{
+    name=\glslink{cdg}{Continuous Delivery},
+    text=continuous delivery,
+    sort=continuous delivery,
+    description={Pratica nell'ambito dell'ingeneria del software che consiste nel rilasciare la build di un software pronta per l'ambiente di produzione}
+}
+
+\newglossaryentry{bugg}
+{
+    name=\glslink{bugg}{Bug},
+    text=bug,
+    sort=bug ,
+    description={In informatica si tratta di un errore nel software che produce risultati inattesi}
+}
+
+\newglossaryentry{cloudg}
+{
+    name=\glslink{cloudg}{Cloud},
+    text=cloud,
+    sort=cloud,
+    description={In informatica si tratta di un errore nel software che produce risultati inattesi}
+}
+
 
 %**************************************************************
 % Acronimi
