--- a/src/main.tex
+++ b/src/main.tex
@@ -24,7 +24,8 @@
                twoside,                 % impagina per fronte-retro
                openright,               % inizio capitoli a destra
                english,                 
-               italian,                 
+               italian,
+               openany,
                ]{book}    
 
 %**************************************************************
